--- a/style.css
+++ b/style.css
@@ -69,6 +69,9 @@ nav {
     height: 50px;
     background-color: rgb(60, 90, 146);
     line-height: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 nav a {
     
